add to cart cubit and some modification

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -90,15 +90,18 @@
   "Taste": "المذاق غير مرضٍ",
   "Other": "أخرى",
   "ShareYourFeedback": "شارك ملاحظاتك",
-  "Submit" : "إرسال",
-  "PleaseSelectAtLeastOneOptionBeforeSubmitting" : "يرجى اختيار خيار واحد على الأقل قبل الإرسال",
-  "AnyComments" :  "أية ملاحظات",
-  "RateYourExperience" : "قيم تجربتك",
-  "Send" : "ارسال",
-  "ComplaintsAndSuggestions" : "الشكاوي والاقتراحات",
-  "Ad5lMola7zat" : "أدخل ملاحظاتك أو أي اقتراح",
-  "MyCarts" : "السلة",
-  "YourCartIsEmpty" : "السلة فارغة!",
-  "Total" : "الإجمالي:",
-  "Checkout" : "دفع"
+  "Submit": "إرسال",
+  "PleaseSelectAtLeastOneOptionBeforeSubmitting": "يرجى اختيار خيار واحد على الأقل قبل الإرسال",
+  "AnyComments": "أية ملاحظات",
+  "RateYourExperience": "قيم تجربتك",
+  "Send": "ارسال",
+  "ComplaintsAndSuggestions": "الشكاوي والاقتراحات",
+  "Ad5lMola7zat": "أدخل ملاحظاتك أو أي اقتراح",
+  "MyCarts": "السلة",
+  "YourCartIsEmpty": "السلة فارغة!",
+  "Total": "الإجمالي:",
+  "Checkout": "دفع",
+  "Undo": "تراجع",
+  "AddedSuccessfully": "تمت إضافة",
+  "ToCard" : "إلي السلة"
 }
