do refactor for removing item

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -103,5 +103,6 @@
   "Checkout": "دفع",
   "Undo": "تراجع",
   "AddedSuccessfully": "تمت إضافة",
-  "ToCard" : "إلي السلة"
+  "ToCard": "إلي السلة",
+  "DeletedSuccessfully": "تم الحذف بنجاح"
 }
