fixing issue in adding any of screen data in empty map (departments is empty)

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -127,5 +127,6 @@
   "AddingNewDailyGame": "إضافة لعبة جديدة",
   "UpdateDailyGame": "تعديل اللعبة",
   "Delete": "حذف",
-  "TheSectionAlreadyExistsYouCannotAddANewSectionWithTheSameName" : "القسم موجود بالفعل! لا يمكنك إضافة قسم جديد بنفس الاسم."
+  "TheSectionAlreadyExistsYouCannotAddANewSectionWithTheSameName": "القسم موجود بالفعل! لا يمكنك إضافة قسم جديد بنفس الاسم.",
+  "PleaseAddAMainCategoryFirst": "يجب إضافة قسم رئيسي أولاً."
 }
