finish register in firebase

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -8,6 +8,10 @@
   "PhoneNumber": "رقم الهاتف",
   "PleaseEnterYourPhoneNumber": "يرجى إدخال رقم هاتفك",
   "EnterYourPhoneNumber": "أدخل رقم هاتفك",
+  "Email": "البريد الإلكتروني",
+  "PleaseEnterYourEmail": "يرجى إدخال بريدك الإلكتروني",
+  "EnterYourEmail": "أدخل بريدك الإلكتروني",
+  "PleaseEnterAValidEmail": "يرجى إدخال بريد إلكتروني صالح",
   "Password": "كلمة المرور",
   "PleaseEnterYourPassword": "يرجى إدخال كلمة المرور",
   "PasswordMustBeAtLeast6CharactersLong": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
