--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,6 +8,10 @@
   "PhoneNumber": "Phone Number",
   "PleaseEnterYourPhoneNumber": "Please enter your phone number",
   "EnterYourPhoneNumber": "Enter your phone number",
+  "Email": "Email",
+  "PleaseEnterYourEmail": "Please enter your email",
+  "EnterYourEmail": "Enter your email",
+  "PleaseEnterAValidEmail": "Please enter a valid email",
   "Password": "Password",
   "PleaseEnterYourPassword": "Please enter your password",
   "PasswordMustBeAtLeast6CharactersLong": "Password must be at least 6 characters long",
