--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -132,5 +132,9 @@
   "UpdateDailyGame": "تعديل اللعبة",
   "Delete": "حذف",
   "TheSectionAlreadyExistsYouCannotAddANewSectionWithTheSameName": "القسم موجود بالفعل! لا يمكنك إضافة قسم جديد بنفس الاسم.",
-  "PleaseAddAMainCategoryFirst": "يجب إضافة قسم رئيسي أولاً."
+  "PleaseAddAMainCategoryFirst": "يجب إضافة قسم رئيسي أولاً.",
+  "UpdateSubScreenTitle": "تحديث اسم الشاشة الفرعية",
+  "TypeSubScreenTitle": "أدخل اسم الشاشة الفرعية",
+  "Cancel": "إلغاء",
+  "FieldCannotBeEmpty": "لا يمكن أن يكون الحقل فارغًا"
 }
