handle some errors

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -137,5 +137,23 @@
   "TypeTitle": "أدخل اسم التصنيف",
   "Cancel": "إلغاء",
   "FieldCannotBeEmpty": "لا يمكن أن يكون الحقل فارغًا",
-  "ErrorOccurred": "حدث خطأ!"
+  "ErrorOccurred": "حدث خطأ!",
+  "Retry" : "أعد المحاولة",
+  "PermissionDenied": "❌ ليس لديك صلاحية لتنفيذ هذا الإجراء.",
+  "unavailable":
+  "تحقق من اتصال الإنترنت وحاول لاحقًا.⚠\uFE0F",
+  "NotFound": "📄 المستند المطلوب غير موجود.",
+  "AlreadyExists": "⚠️ يوجد مستند بهذا المعرف بالفعل.",
+  "cancelled": "🚫 تم إلغاء الطلب.",
+  "DeadlineExceeded": "⏳ استغرق الطلب وقتًا طويلًا. حاول مرة أخرى.",
+  "ResourceExhausted": "⚠️ تم تجاوز الحصة. عدد كبير جدًا من الطلبات.",
+  "FailedPrecondition": "⚠️ العملية غير مسموحة في الوضع الحالي.",
+  "aborted": "🚫 تم إحباط العملية. الرجاء المحاولة مرة أخرى.",
+  "internal": "⚠️ حدث خطأ داخلي في Firestore.",
+  "unimplemented": "⚠️ هذه العملية غير مدعومة.",
+  "unauthenticated": "🔑 يجب أن تسجل الدخول لتنفيذ هذا الإجراء.",
+  "NetworkError": "⚠️ لا يوجد اتصال بالإنترنت.",
+  "NetworkRequestFailed": "⚠️ لا يوجد اتصال بالإنترنت.",
+  "SocketException": "⚠️ لا يوجد اتصال بالإنترنت.",
+  "unknown": "⚠️ حدث خطأ غير معروف في Firestore."
 }
