handle some errors caching removing sub screen remove all data  of it

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -132,7 +132,7 @@
   "UpdateDailyGame": "تعديل اللعبة",
   "Delete": "حذف",
   "TheSectionAlreadyExistsYouCannotAddANewSectionWithTheSameName": "القسم موجود بالفعل! لا يمكنك إضافة قسم جديد بنفس الاسم.",
-  "PleaseAddAMainCategoryFirst": "يجب إضافة قسم رئيسي أولاً.",
+  "PleaseAddAMainCategoryFirst": "يجب إختيار قسم رئيسي أولاً.",
   "UpdateTitle": "تعديل اسم التصنيف",
   "TypeTitle": "أدخل اسم التصنيف",
   "Cancel": "إلغاء",
