add description field in menu item

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -103,6 +103,7 @@
   "Ad5lMola7zat": "أدخل ملاحظاتك أو أي اقتراح",
   "MyCarts": "السلة",
   "YourCartIsEmpty": "السلة فارغة!",
+  "AddToCart" : "أضف إلى العربة",
   "Total": "الإجمالي:",
   "Checkout": "دفع",
   "Undo": "تراجع",
@@ -125,9 +126,9 @@
   "GamePrice": "سعر اللعبة",
   "EnterPriceOfGame": "أدخل سعر اللعبة",
   "PleaseEnterPriceOfGame": "الرجاء إدخال سعر اللعبة",
-  "DescriptionAboutGame": "وصف عن اللعبة",
-  "EnterDescriptionAboutGame": "أضف وصفاً عن اللعبة",
-  "PleaseEnterDescriptionAboutGame": "الرجاء إضافة وصف عن اللعبة",
+  "Description": "وصف",
+  "EnterDescription": "أضف وصفاً",
+  "PleaseEnterDescription": "الرجاء إضافة وصف",
   "AddingNewDailyGame": "إضافة لعبة جديدة",
   "UpdateDailyGame": "تعديل اللعبة",
   "Delete": "حذف",
