--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -103,6 +103,7 @@
   "Ad5lMola7zat": "Enter your complaint or suggestion",
   "MyCarts": "My Carts",
   "YourCartIsEmpty": "Your cart is empty!",
+  "AddToCart" : "Add To Cart",
   "Total": "Total:",
   "Checkout": "Checkout",
   "Undo": "Undo",
@@ -125,9 +126,9 @@
   "GamePrice": "Game Price",
   "EnterPriceOfGame": "Enter price of game",
   "PleaseEnterPriceOfGame": "Please enter price of game",
-  "DescriptionAboutGame": "Description About Game",
-  "EnterDescriptionAboutGame": "Add description about game",
-  "PleaseEnterDescriptionAboutGame": "Please add description about game",
+  "Description": "Description",
+  "EnterDescription": "Add description",
+  "PleaseEnterDescription": "Please add description",
   "AddingNewDailyGame": "Adding new game",
   "UpdateDailyGame": "Update Game",
   "Delete": "Delete",
