add user verification

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -25,10 +25,14 @@
   "UserName": "User Name",
   "EnterYourUserName": "Enter your user name",
   "PleaseEnterYourUserName": "Please enter your user name",
-  "VerificationCodeSent": "Verification Code Sent",
-  "WeTextedYouA5DigitCodeTo": "We texted you a 5-digit code to",
-  "PleaseEnterItBelow": "please enter it below",
+  "ActivationLinkSent": "ِِActivation link sent",
+  "ActivationLinkSentToYourEmail":"An activation link has been sent to your email.",
+  "PleaseCheckYourInboxAndClickTheLinkToActivateYourAccount": "Please check your inbox and click the link to activate your account.",
+  "GoToLogin": "Go to login",
   "Resend": "Resend",
+  "ResendCoolDown": "Try again after",
+  "Seconds" : "Seconds",
+  "ResendActivation": "Resend activation",
   "RegisteredSuccessfully": "Registered Successfully",
   "Confirm": "Confirm",
   "Hello": "Hello",
