--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -25,10 +25,13 @@
   "UserName": "اسم المستخدم",
   "EnterYourUserName": "أدخل اسم المستخدم",
   "PleaseEnterYourUserName": "يرجى إدخال اسم المستخدم",
-  "VerificationCodeSent": "تم إرسال رمز التحقق",
-  "WeTextedYouA5DigitCodeTo": "لقد أرسلنا لك رمز تحقق مكونًا من 5 أرقام إلى",
-  "PleaseEnterItBelow": "يرجى إدخاله أدناه",
-  "Resend": "إعادة الإرسال",
+  "ActivationLinkSent": "تم إرسال رابط التفعيل",
+  "ActivationLinkSentToYourEmail": "تم إرسال رابط التفعيل إلى بريدك الإلكتروني.",
+  "PleaseCheckYourInboxAndClickTheLinkToActivateYourAccount": " من فضلك تحقق من بريدك واضغط على الرابط لتفعيل حسابك.",
+  "GoToLogin": "اذهب إلى تسجيل الدخول",
+  "ResendCoolDown": "أعد المحاولة بعد",
+  "Seconds": "ثانية",
+  "ResendActivation": "إعادة إرسال التفعيل",
   "RegisteredSuccessfully": "تم التسجيل بنجاح",
   "Confirm": "تأكيد",
   "Hello": "مرحبًا",
