implement main menu view

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -108,7 +108,7 @@
   "Ad5lMola7zat": "أدخل ملاحظاتك أو أي اقتراح",
   "MyCarts": "السلة",
   "YourCartIsEmpty": "السلة فارغة!",
-  "AddToCart" : "أضف إلى العربة",
+  "AddToCart": "أضف إلى العربة",
   "Total": "الإجمالي:",
   "Checkout": "دفع",
   "Undo": "تراجع",
@@ -144,10 +144,9 @@
   "Cancel": "إلغاء",
   "FieldCannotBeEmpty": "لا يمكن أن يكون الحقل فارغًا",
   "ErrorOccurred": "حدث خطأ!",
-  "Retry" : "أعد المحاولة",
+  "Retry": "أعد المحاولة",
   "PermissionDenied": "❌ ليس لديك صلاحية لتنفيذ هذا الإجراء.",
-  "unavailable":
-  "تحقق من اتصال الإنترنت وحاول لاحقًا.⚠\uFE0F",
+  "unavailable": "تحقق من اتصال الإنترنت وحاول لاحقًا.⚠\uFE0F",
   "NotFound": "📄 المستند المطلوب غير موجود.",
   "AlreadyExists": "⚠️ يوجد مستند بهذا المعرف بالفعل.",
   "cancelled": "🚫 تم إلغاء الطلب.",
@@ -162,5 +161,14 @@
   "NetworkRequestFailed": "⚠️ لا يوجد اتصال بالإنترنت.",
   "SocketException": "⚠️ لا يوجد اتصال بالإنترنت.",
   "unknown": "⚠️ حدث خطأ غير معروف في Firestore.",
-  "GoToComplaints" : "اذهب إلى الشكاوى والاقتراحات"
+  "GoToComplaints": "اذهب إلى الشكاوى والاقتراحات",
+  "MainMenu": "القائمة الرئيسية",
+  "ViewProfile": "عرض الملف الشخصي",
+  "Favorites": "المفضلة",
+  "Settings": "الإعدادات",
+  "Help": "المساعدة",
+  "Complaints": "الشكاوى والاقتراحات",
+  "AboutApp": "حول التطبيق",
+  "ContactUs": "اتصل بنا",
+  "LocationHere": "الموقع"
 }
