--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -26,12 +26,12 @@
   "EnterYourUserName": "Enter your user name",
   "PleaseEnterYourUserName": "Please enter your user name",
   "ActivationLinkSent": "ِِActivation link sent",
-  "ActivationLinkSentToYourEmail":"An activation link has been sent to your email.",
+  "ActivationLinkSentToYourEmail": "An activation link has been sent to your email.",
   "PleaseCheckYourInboxAndClickTheLinkToActivateYourAccount": "Please check your inbox and click the link to activate your account.",
   "GoToLogin": "Go to login",
   "Resend": "Resend",
   "ResendCoolDown": "Try again after",
-  "Seconds" : "Seconds",
+  "Seconds": "Seconds",
   "ResendActivation": "Resend activation",
   "ResetLinkSentCheckYourEmail": "Password reset link sent, please check your email.",
   "SendResetLink": "Send reset link",
@@ -109,7 +109,7 @@
   "Ad5lMola7zat": "Enter your complaint or suggestion",
   "MyCarts": "My Carts",
   "YourCartIsEmpty": "Your cart is empty!",
-  "AddToCart" : "Add To Cart",
+  "AddToCart": "Add To Cart",
   "Total": "Total:",
   "Checkout": "Checkout",
   "Undo": "Undo",
@@ -147,8 +147,7 @@
   "ErrorOccurred": "Error occurred",
   "Retry": "Retry",
   "PermissionDenied": "You don’t have permission to perform this action.",
-  "Unavailable":
-  "Check your internet connection, try again later.",
+  "Unavailable": "Check your internet connection, try again later.",
   "NotFound": "The requested document was not found.",
   "AlreadyExists": "A document with this ID already exists.",
   "cancelled": "The request was cancelled.",
@@ -163,5 +162,14 @@
   "NetworkRequestFailed": "No internet connection.",
   "SocketException": "⚠️ No internet connection",
   "unknown": "An unknown Firestore error occurred.",
-  "GoToComplaints" : "Go to Complaints & Suggestions"
+  "GoToComplaints": "Go to Complaints & Suggestions",
+  "MainMenu": "Main Menu",
+  "ViewProfile": "View Profile",
+  "Favorites": "Favorites",
+  "Settings": "Settings",
+  "Help": "Help",
+  "Complaints": "Complaints & Suggestions",
+  "AboutApp": "About the App",
+  "ContactUs": "Contact Us",
+  "LocationHere": "Location"
 }
