add view profile and fetch profile data

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -170,5 +170,28 @@
   "Complaints": "الشكاوى والاقتراحات",
   "AboutApp": "حول التطبيق",
   "ContactUs": "اتصل بنا",
-  "LocationHere": "الموقع"
+  "Profile": "عرض الملف الشخصي",
+  "EditProfile": "تعديل الملف الشخصي",
+  "ChangePassword": "تغيير كلمة المرور",
+  "LogOut": "تسجيل الخروج",
+  "Unauthenticated": "🔑 يجب أن تسجل الدخول لتنفيذ هذا الإجراء.",
+  "Cancelled": "🚫 تم إلغاء الطلب.",
+  "Aborted": "🚫 تم إحباط العملية. الرجاء المحاولة مرة أخرى.",
+  "OutOfRange": "⚠️ القيمة خارج النطاق المسموح به.",
+  "Unavailable": "⚠️ الخدمة غير متاحة. تحقق من اتصال الإنترنت.",
+  "Internal": "⚠️ حدث خطأ داخلي في Firestore.",
+  "Unimplemented": "⚠️ هذه العملية غير مدعومة.",
+  "DataLoss": "⚠️ فقدان أو تلف غير قابل للاسترداد في البيانات.",
+  "Unknown": "⚠️ حدث خطأ غير معروف في Firestore.",
+  "InvalidEmail": "📧 البريد الإلكتروني غير صالح.",
+  "UserDisabled": "🚫 تم تعطيل حساب هذا المستخدم.",
+  "UserNotFound": "❌ لم يتم العثور على مستخدم بهذا البريد الإلكتروني.",
+  "WrongPassword": "🔑 كلمة المرور غير صحيحة.",
+  "EmailAlreadyInUse": "⚠️ البريد الإلكتروني مستخدم بالفعل من حساب آخر.",
+  "OperationNotAllowed": "⚠️ هذه العملية غير مسموحة.",
+  "WeakPassword": "⚠️ كلمة المرور ضعيفة جدًا.",
+  "RequiresRecentLogin": "🔒 يرجى تسجيل الدخول مرة أخرى قبل تنفيذ هذا الإجراء.",
+  "TooManyRequests": "⚠️ عدد كبير جدًا من الطلبات. حاول لاحقًا.",
+  "InvalidVerificationCode": "⚠️ رمز التحقق غير صالح.",
+  "InvalidVerificationId": "⚠️ معرف التحقق غير صالح."
 }
