--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -171,5 +171,28 @@
   "Complaints": "Complaints & Suggestions",
   "AboutApp": "About the App",
   "ContactUs": "Contact Us",
-  "LocationHere": "Location"
+  "Profile": "Profile",
+  "EditProfile": "Edit Profile",
+  "ChangePassword": "Change Password",
+  "LogOut": "Log Out",
+  "OutOfRange": "⚠️ The value is out of the allowed range.",
+  "Unauthenticated": "🔑 You must be logged in to perform this action.",
+  "Cancelled": "🚫 The request was cancelled.",
+  "Aborted": "🚫 The operation was aborted. Please try again.",
+  "Internal": "⚠️ An internal error occurred in Firestore.",
+  "Unimplemented": "⚠️ This operation is not supported.",
+  "DataLoss": "⚠️ Unrecoverable data loss or corruption.",
+  "NetworkError": "⚠️ No internet connection.",
+  "Unknown": "⚠️ An unknown Firestore error occurred.",
+  "InvalidEmail": "📧 The email address is not valid.",
+  "UserDisabled": "🚫 This user account has been disabled.",
+  "UserNotFound": "❌ No user found with this email.",
+  "WrongPassword": "🔑 The password is invalid.",
+  "EmailAlreadyInUse": "⚠️ The email address is already in use by another account.",
+  "OperationNotAllowed": "⚠️ This operation is not allowed.",
+  "WeakPassword": "⚠️ The password is too weak.",
+  "RequiresRecentLogin": "🔒 Please log in again before performing this action.",
+  "TooManyRequests": "⚠️ Too many requests. Please try again later.",
+  "InvalidVerificationCode": "⚠️ The verification code is invalid.",
+  "InvalidVerificationId": "⚠️ The verification ID is invalid."
 }
