finish edit user profile data view

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -193,5 +193,6 @@
   "RequiresRecentLogin": "🔒 يرجى تسجيل الدخول مرة أخرى قبل تنفيذ هذا الإجراء.",
   "TooManyRequests": "⚠️ عدد كبير جدًا من الطلبات. حاول لاحقًا.",
   "InvalidVerificationCode": "⚠️ رمز التحقق غير صالح.",
-  "InvalidVerificationId": "⚠️ معرف التحقق غير صالح."
+  "InvalidVerificationId": "⚠️ معرف التحقق غير صالح.",
+  "UpdatedSuccessfully" : "تم التعديل بنجاح"
 }
