change svg icons

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -194,5 +194,7 @@
   "TooManyRequests": "⚠️ عدد كبير جدًا من الطلبات. حاول لاحقًا.",
   "InvalidVerificationCode": "⚠️ رمز التحقق غير صالح.",
   "InvalidVerificationId": "⚠️ معرف التحقق غير صالح.",
-  "UpdatedSuccessfully" : "تم التعديل بنجاح"
+  "UpdatedSuccessfully": "تم التعديل بنجاح",
+  "ErrorLoadingData": "حدث خطأ أثناء تحميل البيانات",
+  "Refresh": "إعادة تحميل"
 }
