setting screen toggle language

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -174,6 +174,9 @@
   "EditProfile": "تعديل الملف الشخصي",
   "ChangePassword": "تغيير كلمة المرور",
   "LogOut": "تسجيل الخروج",
+  "ConfirmLogoutTitle": "تأكيد تسجيل الخروج",
+  "ConfirmLogoutMessage": "هل أنت متأكد أنك تريد تسجيل الخروج؟",
+  "LogoutSuccess": "تم تسجيل الخروج بنجاح",
   "Unauthenticated": "🔑 يجب أن تسجل الدخول لتنفيذ هذا الإجراء.",
   "Cancelled": "🚫 تم إلغاء الطلب.",
   "Aborted": "🚫 تم إحباط العملية. الرجاء المحاولة مرة أخرى.",
@@ -207,5 +210,13 @@
   "UpdatePassword": "تحديث كلمة المرور",
   "ThisFieldIsRequired": "هذا الحقل مطلوب",
   "UserMismatch": "بيانات الاعتماد المقدمة لا تطابق المستخدم الحالي",
-  "InvalidCredential": "بيانات تسجيل الدخول غير صحيحة"
+  "InvalidCredential": "بيانات تسجيل الدخول غير صحيحة",
+  "Language": "اللغة",
+  "Notifications": "الإشعارات",
+  "DarkMode": "الوضع المظلم",
+  "TapToEditProfileInline": "اضغط لتعديل ملفك الشخصي مباشرة",
+  "RestartRequiredTitle": "إعادة التشغيل مطلوبة",
+  "RestartRequiredMessage": "تغيير اللغة سيتطلب إعادة تشغيل التطبيق.\nهل ترغب في إعادة التشغيل الآن؟",
+  "Restart": "إعادة التشغيل",
+  "ChooseLanguage": "اختر اللغة"
 }
