finish FAQs widget

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -221,5 +221,18 @@
   "ChooseLanguage": "اختر اللغة",
   "AboutThisAppTitle": "حول هذا التطبيق",
   "AboutThisAppDescription": "تطبيق إنفانتري هاوس v1.0.0\n\nتم تطويره بواسطة جورج سمير ❤\uFE0F باستخدام فلاتر.\n© ٢٠٢٥ إنفانتري هاوس.",
-  "Ok": "حسناً"
+  "Ok": "حسناً",
+  "FAQs": "الأسئلة الشائعة",
+  "ContactSupport": "تواصل مع الدعم",
+  "HowCanIResetPasswordQ": "كيف يمكنني إعادة تعيين كلمة المرور؟",
+  "HowCanIResetPasswordA": "اذهب إلى الإعدادات → تغيير كلمة المرور. يمكنك إعادة تعيينها باستخدام البريد الإلكتروني.",
+  "HowCanIContactSupportQ": "كيف يمكنني التواصل مع الدعم؟",
+  "HowCanIContactSupportA": "يمكنك التواصل معنا من خلال زر 'تواصل مع الدعم' أدناه أو عبر البريد الإلكتروني gs976327@gamil.com.",
+  "HowToChangeLanguageQ": "كيف أغير لغة التطبيق؟",
+  "HowToChangeLanguageA": "اذهب إلى الإعدادات → اللغة، ثم اختر اللغة المفضلة لديك.",
+  "ContactSupportMessage": "يمكنك التواصل مع فريق الدعم لدينا على:\n\n📧 gs976327@gmail.com\n📞 01091843803",
+  "Close": "إغلاق",
+  "HowToEditUserInfoQ": "كيف أغير اسمي أو رقم الهاتف؟",
+  "HowToEditUserInfoA": "اذهب إلى الإعدادات → تعديل الملف الشخصي. من هناك يمكنك تحديث اسمك أو رقم الهاتف ثم حفظ التغييرات."
+
 }
