finish submit app complaints and suggestion

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -233,6 +233,10 @@
   "ContactSupportMessage": "يمكنك التواصل مع فريق الدعم لدينا على:\n\n📧 gs976327@gmail.com\n📞 01091843803",
   "Close": "إغلاق",
   "HowToEditUserInfoQ": "كيف أغير اسمي أو رقم الهاتف؟",
-  "HowToEditUserInfoA": "اذهب إلى الإعدادات → تعديل الملف الشخصي. من هناك يمكنك تحديث اسمك أو رقم الهاتف ثم حفظ التغييرات."
+  "HowToEditUserInfoA": "اذهب إلى الإعدادات → تعديل الملف الشخصي. من هناك يمكنك تحديث اسمك أو رقم الهاتف ثم حفظ التغييرات.",
+  "ComplaintsDescription": "شاركنا ملاحظاتك لمساعدتنا على تحسين خدماتنا.",
+  "Name": "الاسم",
+  "Message": "الرسالة",
+  "ThankYou": "شكرًا لملاحظاتك!"
 
 }
