finish contact us widget

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -237,6 +237,15 @@
   "ComplaintsDescription": "شاركنا ملاحظاتك لمساعدتنا على تحسين خدماتنا.",
   "Name": "الاسم",
   "Message": "الرسالة",
-  "ThankYou": "شكرًا لملاحظاتك!"
+  "ThankYou": "شكرًا لملاحظاتك!",
+  "Facebook": "فيسبوك",
+  "WhatsApp": "واتساب",
+  "CallUs": "اتصل بنا",
+  "VisitUs": "زورنا",
+  "cannotLaunchUrl": "لا يمكن فتح هذا الرابط",
+  "locationSubtitle": "38H3+M6H، جسر إسماعيل، الفنجري، بجوار منشية البكري، مصر الجديدة، القاهرة",
+  "instagram": "انستجرام"
+
+
 
 }
