replace daily game with academy

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -117,7 +117,7 @@
   "DeletedSuccessfully": "تم الحذف بنجاح",
   "Ad5lEsmEltsnef": "أدخل اسم التصنيف",
   "MnFdlkAd5lEsmEltsnef": "من فضلك أدخل اسم التصنيف",
-  "DailyGames": "ألعاب يومية",
+  "Academies": "الأكاديميات",
   "Subscriptions": "الإشتراكات",
   "TrainerName": "أسم المدرب",
   "DailyGamesItemImage": "صورة اللعبة",
