--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -118,7 +118,7 @@
   "DeletedSuccessfully": "Deleted successfully",
   "Ad5lEsmEltsnef": "Enter Category Name",
   "MnFdlkAd5lEsmEltsnef": "Please Enter Category Name",
-  "DailyGames": "Daily Games",
+  "Academies": "Academies",
   "Subscriptions": "Subscriptions",
   "TrainerName": "Trainer name",
   "DailyGamesItemImage": "Daily games item image",
